--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,42 @@
 @import '~bootstrap/scss/bootstrap';
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+// header 
+
+.logo-img {
+    height: 80px;
+    margin-right: 30px;
+
+    img {
+        height: 100%;
+    }
+}
+
+// /header 
+
+// main
+.title {
+    color: darkblue;
+    text-transform: uppercase;
+}
+
+table {
+    tr {
+        .title-table {
+            text-transform: uppercase;
+            padding: 20px;
+            color: green;
+            border-top: 3px solid darkblue;
+        }
+
+        .content-table {
+            font-weight: bold;
+            padding: 20px;
+        }
+    }
+}
